--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
   <title>My Resume</title>
 
   <link rel="stylesheet" href="css/index.css">
@@ -14,6 +14,72 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+
+  <div class="navigation">
+    <nav>
+        <a href="x">About</a>
+        <a href="x">Skills</a>
+        <a href="x">Work History</a>
+        <a href="x">Contact</a>
+    </nav>
+  </div>
+
+
+  <header>
+    <div class="heading">
+      <h1>Carlos Hassin</h1>
+      <h2>Full Stack Web Developer</h2>
+    </div>
+  </header>
+
+  <section class="main-content">
+    <div class="left-column">
+      <h2>About Me</h2>
+    </div>
+    <div class="right-column">
+        <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque magnam atque praesentium? Consectetur unde saepe nisi velit recusandae minus accusamus aut maxime voluptatibus possimus, voluptas, dicta repudiandae sunt in excepturi!
+        </p>
+    </div>
+  
+   <div class="left-column">
+      <h3>Skills</h3>
+    </div>
+    <div class="right-column">
+        <div class="skills">
+          <h3>HTML</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, ipsa. Sed qui magnam labore et voluptas! Maxime unde voluptatibus nemo incidunt dolore veritatis autem natus ea, ullam laborum aperiam vel!</p>
+          <h3>CSS</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos expedita vero eveniet illum aliquid alias aut error! Fugiat alias animi quos architecto ducimus dicta, commodi ut maxime impedit? Ducimus, magni?</p>
+          <h3>Javascript</h3>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et nesciunt fugit consectetur rerum facilis magni itaque hic voluptate voluptatibus dignissimos dicta nihil temporibus vel laboriosam, veritatis perferendis officiis ducimus cumque.</p>
+          </div>
+        </div>
+
+    <div class="left-column">
+      <h2>Work History</h2>
+    </div>
+    <div class="right-column">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam odio nemo cupiditate ipsam odit! Delectus voluptatum aliquid voluptate, vitae debitis impedit similique deserunt ad exercitationem veritatis. Explicabo reprehenderit quas incidunt!</p>
+      </div>
+
+    <div class="left-column">
+      <h2>Contact</h2>
+    </div>
+    <div class="right-column">
+      <ul>
+          <li>Email: cehassin@gmail.com</li>
+          <li>Cell: 9092523877</li>
+        </ul>
+      
+        <h2>Links
+        </h2>
+        <button>GitHub</button>
+        <button>LinkedIn</button>
+      </div>
+  
+  </section>
+
+
 </body>
 </html>
